--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,6 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+deploy/uwsgi-local.ini
+everyclass/identity/config/development.py
+.idea
