--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "everyclass/rpc"]
 	path = everyclass/rpc
 	url = https://github.com/everyclass/everyclass-rpc
+[submodule "everyclass/identity/utils/logbook_logstash"]
+	path = everyclass/identity/utils/logbook_logstash
+	url = https://github.com/fr0der1c/logbook_logstash
