--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "everyclass/rpc"]
 	path = everyclass/rpc
+	branch = master
 	url = https://github.com/everyclass/everyclass-rpc
 [submodule "everyclass/identity/utils/logbook_logstash"]
 	path = everyclass/identity/utils/logbook_logstash
+	branch = master
 	url = https://github.com/fr0der1c/logbook_logstash
