--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,7 @@
-[submodule "everyclass/rpc"]
+[submodule "everyclass-rpc"]
 	path = everyclass/rpc
 	branch = master
 	url = https://github.com/everyclass/everyclass-rpc
-[submodule "everyclass/identity/utils/logbook_logstash"]
-	path = everyclass/identity/utils/logbook_logstash
-	branch = master
-	url = https://github.com/fr0der1c/logbook_logstash
 [submodule "everyclass-common"]
 	path = everyclass/common
 	url = https://github.com/everyclass/everyclass-common
